src/test/ui/suggestions/suggest-labels.stderr
error[E0426]: use of undeclared label `'fo`
  --> $DIR/suggest-labels.rs:14:15
   |
LL |         break 'fo; //~ ERROR use of undeclared label
   |               ^^^ did you mean `'foo`?

error[E0426]: use of undeclared label `'bor`
  --> $DIR/suggest-labels.rs:18:18
   |
LL |         continue 'bor; //~ ERROR use of undeclared label
   |                  ^^^^ did you mean `'bar`?

error[E0426]: use of undeclared label `'longlable`
  --> $DIR/suggest-labels.rs:23:19
   |
LL |             break 'longlable; //~ ERROR use of undeclared label
   |                   ^^^^^^^^^^ did you mean `'longlabel1`?

error: aborting due to 3 previous errors

If you want more information on this error, try using "rustc --explain E0426"
